Emit CustomerBrowsing event to MQTT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ mp.messaging.outgoing.kogito_outgoing_stream.connector=smallrye-kafka
 mp.messaging.outgoing.kogito_outgoing_stream.topic=CUSTOMER_FOCUS
 mp.messaging.outgoing.kogito_outgoing_stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 #mp.messaging.outgoing.kogito_outgoing_stream.bootstrap.servers=localhost:9092
+
+
+mp.messaging.outgoing.sink.connector=smallrye-mqtt
+mp.messaging.outgoing.sink.topic=${MQTT_TOPIC:customer/browsing}
+mp.messaging.outgoing.sink.host=${MQTT_HOST:127.0.0.1}
+mp.messaging.outgoing.sink.port=${MQTT_PORT:1883}
+mp.messaging.outgoing.sink.auto-generated-client-id=true
+mp.messaging.outgoing.sink.broadcast=true
