Get rid of polish channel name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ quarkus.native.native-image-xmx=4g
 kogito.messaging.as-cloudevents=false
 
 ## Inbound
-mp.messaging.incoming.jeden.connector=smallrye-mqtt
-mp.messaging.incoming.jeden.topic=${MQTT_TOPIC_MOVE:customer/move}
-mp.messaging.incoming.jeden.host=${MQTT_HOST:127.0.0.1}
-mp.messaging.incoming.jeden.port=${MQTT_PORT:1883}
-mp.messaging.incoming.jeden.auto-generated-client-id=true
-mp.messaging.incoming.jeden.broadcast=true
+mp.messaging.incoming.source.connector=smallrye-mqtt
+mp.messaging.incoming.source.topic=${MQTT_TOPIC_MOVE:customer/move}
+mp.messaging.incoming.source.host=${MQTT_HOST:127.0.0.1}
+mp.messaging.incoming.source.port=${MQTT_PORT:1883}
+mp.messaging.incoming.source.auto-generated-client-id=true
+mp.messaging.incoming.source.broadcast=true
 
 
 # Outbound
