Unify env names (with other components); Add default constructor for BrowsingEvent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ kogito.messaging.as-cloudevents=false
 
 ## Inbound
 mp.messaging.incoming.source.connector=smallrye-mqtt
-mp.messaging.incoming.source.topic=${MQTT_TOPIC_MOVE:customer/move}
+mp.messaging.incoming.source.topic=${MOVE_TOPIC:customer/move}
 mp.messaging.incoming.source.host=${MQTT_HOST:127.0.0.1}
 mp.messaging.incoming.source.port=${MQTT_PORT:1883}
 mp.messaging.incoming.source.auto-generated-client-id=true
@@ -19,7 +19,7 @@ mp.messaging.incoming.source.broadcast=true
 
 # Outbound
 mp.messaging.outgoing.kogito_outgoing_stream.connector=smallrye-mqtt
-mp.messaging.outgoing.kogito_outgoing_stream.topic=${MQTT_TOPIC_FOCUS:customer/focus}
+mp.messaging.outgoing.kogito_outgoing_stream.topic=${FOCUS_TOPIC:customer/focus}
 mp.messaging.outgoing.kogito_outgoing_stream.host=${MQTT_HOST:127.0.0.1}
 mp.messaging.outgoing.kogito_outgoing_stream.port=${MQTT_PORT:1883}
 mp.messaging.outgoing.kogito_outgoing_stream.auto-generated-client-id=true
@@ -33,7 +33,7 @@ mp.messaging.outgoing.kogito_outgoing_stream.auto-generated-client-id=true
 
 
 mp.messaging.outgoing.sink.connector=smallrye-mqtt
-mp.messaging.outgoing.sink.topic=${MQTT_TOPIC_BROWSING:customer/browsing}
+mp.messaging.outgoing.sink.topic=${BROWSE_TOPIC:customer/browsing}
 mp.messaging.outgoing.sink.host=${MQTT_HOST:127.0.0.1}
 mp.messaging.outgoing.sink.port=${MQTT_PORT:1883}
 mp.messaging.outgoing.sink.auto-generated-client-id=true
