--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,18 +9,32 @@ quarkus.native.native-image-xmx=4g
 kogito.messaging.as-cloudevents=false
 
 ## Inbound
-mp.messaging.incoming.jeden.connector=smallrye-mqtt
-mp.messaging.incoming.jeden.topic=customer/move
-mp.messaging.incoming.jeden.host=127.0.0.1
-mp.messaging.incoming.jeden.port=1883
-mp.messaging.incoming.jeden.auto-generated-client-id=true
-mp.messaging.incoming.jeden.broadcast=true
+mp.messaging.incoming.source.connector=smallrye-mqtt
+mp.messaging.incoming.source.topic=${MOVE_TOPIC:customer/move}
+mp.messaging.incoming.source.host=${MQTT_HOST:127.0.0.1}
+mp.messaging.incoming.source.port=${MQTT_PORT:1883}
+mp.messaging.incoming.source.auto-generated-client-id=true
+mp.messaging.incoming.source.broadcast=true
 
 
 # Outbound
-kafka.bootstrap.servers=localhost:9092
+mp.messaging.outgoing.kogito_outgoing_stream.connector=smallrye-mqtt
+mp.messaging.outgoing.kogito_outgoing_stream.topic=${FOCUS_TOPIC:customer/focus}
+mp.messaging.outgoing.kogito_outgoing_stream.host=${MQTT_HOST:127.0.0.1}
+mp.messaging.outgoing.kogito_outgoing_stream.port=${MQTT_PORT:1883}
+mp.messaging.outgoing.kogito_outgoing_stream.auto-generated-client-id=true
 
-mp.messaging.outgoing.kogito_outgoing_stream.connector=smallrye-kafka
-mp.messaging.outgoing.kogito_outgoing_stream.topic=CUSTOMER_FOCUS
-mp.messaging.outgoing.kogito_outgoing_stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-#mp.messaging.outgoing.kogito_outgoing_stream.bootstrap.servers=localhost:9092
+## to switch to Kafka, use:
+#kafka.bootstrap.servers=localhost:9092
+#mp.messaging.outgoing.kogito_outgoing_stream.connector=smallrye-mqtt
+#mp.messaging.outgoing.kogito_outgoing_stream.topic=CUSTOMER_FOCUS
+#mp.messaging.outgoing.kogito_outgoing_stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+##mp.messaging.outgoing.kogito_outgoing_stream.bootstrap.servers=localhost:9092
+
+
+mp.messaging.outgoing.sink.connector=smallrye-mqtt
+mp.messaging.outgoing.sink.topic=${BROWSE_TOPIC:customer/browsing}
+mp.messaging.outgoing.sink.host=${MQTT_HOST:127.0.0.1}
+mp.messaging.outgoing.sink.port=${MQTT_PORT:1883}
+mp.messaging.outgoing.sink.auto-generated-client-id=true
+mp.messaging.outgoing.sink.broadcast=true
